# api.till.md

./: .Dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: connections.rs  main.rs
src/graphql/: guards.rs  links.rs  mod.rs  roles.rs
src/graphql/admin/: inputs.rs  mod.rs
src/graphql/channel/: inputs.rs  mod.rs  objects.rs
src/graphql/sync/: inputs.rs  mod.rs  objects.rs
src/graphql/user/: inputs.rs  mod.rs  objects.rs
src/models/: channel.rs  links.rs  mod.rs  model.rs  user.rs
src/password/: mod.rs
src/routes/: gql.rs  health.rs  mod.rs
