[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
log = "0.4.16"
pretty_env_logger = "0.4.0"

# Web
rocket = { version = "0.5.0-rc.2", features = ["json", "serde_json"] }
juniper = "0.15.9"
juniper_rocket = "0.8.1"

# Async
tokio = { version = "1.17.0", features = ["full"]}

# Misc
sysinfo = "0.23.8"
serde = "1.0.136"
serde_json = "1.0.79"
