[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
log = "0.4.16"
pretty_env_logger = "0.4.0"

# Web
actix-web = { version = "4.2.1", default-features = false, features = ["macros"] }

# Database
mongodb = "2.3.1"

# Graphql
async-graphql = "4.0.15"
async-graphql-actix-web = "4.0.15"

# Async
tokio = { version = "1.17.0", features = ["full"]}
tokio-stream = "0.1.11"
futures-timer = "3.0.2"
async-trait = "0.1.57"

# Misc
sysinfo = "0.23.8"
serde = "1.0.136"
serde_json = "1.0.79"
anyhow = "1.0.65"