[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
log = "0.4.16"
pretty_env_logger = "0.4.0"

# Web
actix-web = { version = "4.2.1", default-features = false, features = ["macros", "rustls"] }

# Database
mongodb = "2.3.1"
redis = "0.22.0"
fred = "5.2.0"

# Graphql
async-graphql = { version = "4.0.15", features = ["default"] }
async-graphql-actix-web = { version = "4.0.15", features = ["default"] }

# Async
tokio = { version = "1.17.0", features = ["full"]}
tokio-stream = "0.1.11"
futures-timer = "3.0.2"
async-trait = "0.1.57"
futures = "0.3.24"

# Crypto
dryoc = { version = "0.4.0", features = ["base64"] }
uuid = "1.2.1"
base64 = "0.20.0-alpha.1"

# Misc
sysinfo = "0.23.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
anyhow = "1.0.65"
chrono = "0.4.22"
strum_macros = "0.24.3"
lazy_static = "1.4.0"